util-improvements: more util improvements